--- a/README
+++ b/README
@@ -26,4 +26,4 @@ CCore wiki on github to brief yourself about this project.
 
 CCore 3-xx is built using C++17. It is not fully backward compartible with 2-xx series.
 
-Online documentation is http://sergeystrukov.github.io/CCore3/ or http://sergeystrukov.github.io/CCore3-50/.
+Online documentation is http://sergeystrukov.github.io/CCore-3-xx/ or http://sergeystrukov.github.io/CCore3-50/.
