--- a/README
+++ b/README
@@ -27,6 +27,7 @@ CCore wiki on github to brief yourself about this project.
 CCore 3-xx is built using C++17. It is not fully backward compartible with 2-xx series.
 
 Online documentation is http://sergeystrukov.github.io/CCore-3-xx/ or http://sergeystrukov.github.io/CCore-3-60/.
+An there is a brief http://sergeystrukov.github.io/CCore-Sphinx-3-60/brief/brief.html.
 
 ---- Status ----
 
